force-app/main/default/objects/Product_Analysis__c/Product_Analysis__c.object-meta.xml
<CustomObject>
    <label>Product Analysis</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Product Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>