force-app/main/default/objects/Product_Analysis__c/fields/Barrels_of_Oil__c.field-meta.xml
<CustomField>
    <fullName>Barrels_of_Oil__c</fullName>
    <description>Secure Wrap app sustainability benefit metric</description>
    <label>Barrels of Oil</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>