force-app/main/default/objects/Product_Analysis__c/fields/Current_Estimated_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Current_Estimated_Annual_Cost__c</fullName>
    <label>Current Estimated Annual Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>