force-app/main/default/objects/Product_Analysis__c/fields/Current_Film_Thickness_ga__c.field-meta.xml
<CustomField>
    <fullName>Current_Film_Thickness_ga__c</fullName>
    <label>Current Film Thickness (ga)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>