force-app/main/default/objects/Product_Analysis__c/fields/Current_Item__c.field-meta.xml
<CustomField>
    <fullName>Current_Item__c</fullName>
    <label>Current Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>