force-app/main/default/objects/Product_Analysis__c/fields/Current_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Current_Manufacturer__c</fullName>
    <label>Current Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>