force-app/main/default/objects/Product_Analysis__c/fields/Current_Roll_Length_ft__c.field-meta.xml
<CustomField>
    <fullName>Current_Roll_Length_ft__c</fullName>
    <label>Current Roll Length (ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>