force-app/main/default/objects/Product_Analysis__c/fields/Current_Roll_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Roll_Price__c</fullName>
    <label>Current Roll Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>