force-app/main/default/objects/Product_Analysis__c/fields/Current_Top_Load_Force__c.field-meta.xml
<CustomField>
    <fullName>Current_Top_Load_Force__c</fullName>
    <label>Current Top Load Force</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>