force-app/main/default/objects/Product_Analysis__c/fields/Current_Weight_oz__c.field-meta.xml
<CustomField>
    <fullName>Current_Weight_oz__c</fullName>
    <label>Current Weight (oz)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>