force-app/main/default/objects/Product_Analysis__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>