force-app/main/default/objects/Product_Analysis__c/fields/externalID__c.field-meta.xml
<CustomField>
    <fullName>externalID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>externalID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>