force-app/main/default/objects/Product_Analysis__c/fields/Film__c.field-meta.xml
<CustomField>
    <fullName>Film__c</fullName>
    <label>Core Usage Decrease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>