force-app/main/default/objects/Product_Analysis__c/fields/Homes_Powered__c.field-meta.xml
<CustomField>
    <fullName>Homes_Powered__c</fullName>
    <label>Homes Powered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>