force-app/main/default/objects/Product_Analysis__c/fields/Manufacturer_Model__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Model__c</fullName>
    <label>Manufacturer/Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>