force-app/main/default/objects/Product_Analysis__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product Analyses</relationshipLabel>
    <relationshipName>Product_Analyses</relationshipName>
    <type>Lookup</type>
</CustomField>