force-app/main/default/objects/Product_Analysis__c/fields/Pallet_Type__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Type__c</fullName>
    <label>Pallet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>