force-app/main/default/objects/Product_Analysis__c/fields/Pallet_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Weight_lbs__c</fullName>
    <label>Pallet Weight (lbs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>