force-app/main/default/objects/Product_Analysis__c/fields/Pallet_Width_in__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Width_in__c</fullName>
    <label>Pallet Width (in)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>