force-app/main/default/objects/Product_Analysis__c/fields/Pallets__c.field-meta.xml
<CustomField>
    <fullName>Pallets__c</fullName>
    <label>Pallets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>