force-app/main/default/objects/Product_Analysis__c/fields/Pallets_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Pallets_Per_Year__c</fullName>
    <label>Pallets Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>