force-app/main/default/objects/Product_Analysis__c/fields/Personal_Vehicle_Emissions__c.field-meta.xml
<CustomField>
    <fullName>Personal_Vehicle_Emissions__c</fullName>
    <description>Secure Wrap app sustainability benefit metric</description>
    <label>Personal Vehicle Emissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>