force-app/main/default/objects/Product_Analysis__c/fields/Plastic_Bottles_Saved__c.field-meta.xml
<CustomField>
    <fullName>Plastic_Bottles_Saved__c</fullName>
    <label>Plastic Bottles Saved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>