force-app/main/default/objects/Product_Analysis__c/fields/Plastic_Straws_Saved__c.field-meta.xml
<CustomField>
    <fullName>Plastic_Straws_Saved__c</fullName>
    <description>Secure Wrap app sustainability benefit metric</description>
    <label>Plastic Straws Saved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>