force-app/main/default/objects/Product_Analysis__c/fields/Proposed_Annual_Savings__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Annual_Savings__c</fullName>
    <label>Proposed Annual Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>