force-app/main/default/objects/Product_Analysis__c/fields/Proposed_Estimated_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Estimated_Annual_Cost__c</fullName>
    <label>Proposed Estimated Annual Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>