force-app/main/default/objects/Product_Analysis__c/fields/Proposed_Item__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Item__c</fullName>
    <label>Proposed Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>