force-app/main/default/objects/Product_Analysis__c/fields/Proposed_Middle_Load_Force__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Middle_Load_Force__c</fullName>
    <label>Proposed Middle Load Force</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>