force-app/main/default/objects/Product_Analysis__c/fields/Proposed_Percent_Savings__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Percent_Savings__c</fullName>
    <label>Proposed Percent Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>