force-app/main/default/objects/Product_Analysis__c/fields/Proposed_Roll_Length_ft__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Roll_Length_ft__c</fullName>
    <label>Proposed Roll Length (ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>