force-app/main/default/objects/Product_Analysis__c/fields/Proposed_Rotations__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Rotations__c</fullName>
    <label>Proposed Rotations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>