force-app/main/default/objects/Product_Analysis__c/fields/Proposed_Total_Stretch__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Total_Stretch__c</fullName>
    <label>Proposed Total Stretch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>