force-app/main/default/objects/Product_Analysis__c/fields/Proposed_Weight_oz__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Weight_oz__c</fullName>
    <label>Proposed Weight (oz)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>