force-app/main/default/objects/Product_Analysis__c/fields/Truckloads__c.field-meta.xml
<CustomField>
    <fullName>Truckloads__c</fullName>
    <label>Truckloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>