force-app/main/default/objects/Product_Analysis__c/fields/Waste_Stream_Pounds_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Waste_Stream_Pounds_Reduction__c</fullName>
    <label>Waste Stream Pounds Reduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>