force-app/main/default/objects/Product_Analysis__c/recordTypes/SecureWrap_Product_Analysis.recordType-meta.xml
<RecordType>
    <fullName>SecureWrap_Product_Analysis</fullName>
    <active>true</active>
    <label>SecureWrap Product Analysis</label>
</RecordType>