force-app/main/default/objects/Product_Analysis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Serial_Number__c</columns>
    <columns>Proposed_Item__c</columns>
    <columns>Proposed_Annual_Savings__c</columns>
    <columns>Waste_Stream_Pounds_Reduction__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>